# GLTF-Skin-Animation-Sample

./: .gitignore  CMakeLists.txt  LICENSE
.run/: gltf-skin-planet.run.xml
cmake/: conan.cmake  set_compile_options.cmake  set_compile_warnings.cmake
res/: c.gltf  fs.glsl  planet.gltf  scorpi.gltf  vs.glsl
src/: Main.cpp
src/components/: GlSkinnedMesh.hpp  Skin.hpp  SkinAnimation.hpp  SkinAnimator.hpp  SkinnedMesh.hpp
src/glsl/: fs.glsl.hpp  vs.glsl.hpp
src/gltf/: GLTFLoader.hpp  LoadGlSkinnedMesh.hpp  LoadGltf.hpp  LoadModel.hpp  LoadSkin.hpp  LoadSkinAnimation.hpp  LoadSkinAnimator.hpp  LoadSkinnedMesh.hpp  Types.hpp  Util.hpp
src/model/: GlSkinnedMesh.hpp  HeapArray.hpp  Skin.hpp  SkinAnimation.hpp  SkinAnimator.hpp  SkinBlendAnimator.hpp  SkinTransitionAnimator.hpp  SkinnedMesh.hpp  Types.hpp
src/util/: Assert.hpp  GLUtils.hpp  SfmlComponents.hpp
